force-app/main/default/objects/Escalation_Hierarchy__c/Escalation_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Escalation Hierarchy</label>
    <nameField>
        <label>SLA Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Escalation Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>