force-app/main/default/objects/Escalation_Hierarchy__c/fields/Facility_Tier_1__c.field-meta.xml
<CustomField>
    <fullName>Facility_Tier_1__c</fullName>
    <inlineHelpText>Escalation time in minutes</inlineHelpText>
    <label>Network Tier 1</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>