force-app/main/default/objects/Escalation_Hierarchy__c/fields/Internal_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Internal_Tier_2__c</fullName>
    <inlineHelpText>Escalation time In minutes</inlineHelpText>
    <label>Internal Tier 2</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>