force-app/main/default/objects/Escalation_Hierarchy__c/fields/Internal_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>Internal_Tier_3__c</fullName>
    <inlineHelpText>Escalation time in minutes</inlineHelpText>
    <label>Internal Tier 3</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>