force-app/main/default/objects/Escalation_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Charter__c</columns>
    <columns>Customer_Tier_1__c</columns>
    <columns>Customer_Tier_2__c</columns>
    <columns>Customer_Tier_3__c</columns>
    <columns>Facility_Tier_1__c</columns>
    <columns>Facility_Tier_2__c</columns>
    <columns>Facility_Tier_3__c</columns>
    <columns>Facility_Tier_4__c</columns>
    <columns>Facility_Tier_5__c</columns>
    <columns>Internal_Tier_1__c</columns>
    <columns>Internal_Tier_2__c</columns>
    <columns>Internal_Tier_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>